fix: set end time
Signed-off-by: Carlos A Becker <caarlos0@users.noreply.github.com>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -10,6 +10,7 @@ brews:
     tap:
       owner: caarlos0
       name: homebrew-tap
+    folder: Formula
     description: 'Apple Music Rich Presence for Discord'
     homepage: 'https://caarlos0.dev'
     plist: |
